# ur5_research

./: .gitignore  IK.py  MUJOCO_LOG.TXT  PPO.py  PPO_run.py  PPO_test.py  README.md  callbacks.py  cartesian_controller.py  cc.py  cc_with_cmd.py  changes.diff  collect_rollouts.py  custom_callbacks.py  filter_data.py  main.py  mjx_ur5_push_env.py  mppi_ur5.py  pyproject.toml  trained_models.pt  traj_logger.py  ur5_env.py  ur5_push_env.py  vecnormalize.pkl  vis_controller.py  vis_env.py  vis_man.py  vis_mppi.py  vis_rollouts.py
data_collection/: collect_rollouts.py  filter_data.py
depracated/: cc.py
env/assets/: scene.xml  ur5_joint_limited_robot_velcontroller.xml
logs/: evaluations.npz
tensorboard_log/PPO_1/: events.out.tfevents.1756870910.Mac.lan.54558.0  events.out.tfevents.1756872002.Mac.lan.55077.0  events.out.tfevents.1756909734.MacBook-Pro-27.local.64999.0  events.out.tfevents.1757433937.MacBook-Pro-39.local.37445.0
tensorboard_log/PPO_10/: events.out.tfevents.1756912269.MacBook-Pro-27.local.67080.0  events.out.tfevents.1757445447.MacBook-Pro-146.local.1634.0
tensorboard_log/PPO_11/: events.out.tfevents.1756912421.MacBook-Pro-27.local.67242.0  events.out.tfevents.1757446398.MacBook-Pro-146.local.2030.0
tensorboard_log/PPO_12/: events.out.tfevents.1756914649.MacBook-Pro-27.local.67643.0  events.out.tfevents.1757446430.MacBook-Pro-146.local.2121.0
tensorboard_log/PPO_13/: events.out.tfevents.1756914823.MacBook-Pro-27.local.67828.0  (+1 more)
vis_scripts/: vis_controller.py  vis_env.py  vis_man.py  vis_rollouts.py
wandb/: latest-run
(+233 files in other folders)
