[project]
name = "research"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium>=1.2.0",
    "imageio>=2.37.0",
    "ipdb>=0.13.13",
    "ipython>=9.4.0",
    #   "jax[cuda12]<0.7.0",
    "jaxtyping",
    "jaxlib<0.7.0",
    "mujoco>=3.3.5",
    "mujoco-mjx>=3.3.5",
    "numpy>=2.3.2",
    "pybind11-stubgen>=2.5.5",
    "rich>=14.1.0",
    "sbx>=0.1.1",
    "sbx-rl>=0.21.0",
    "scipy>=1.16.1",
    "stable-baselines3>=2.7.0",
    "tensorboard>=2.20.0",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
    "wandb>=0.21.3",
    "dataclasses>=0.8",
    "pathlib>=1.0.1",
    "typing>=3.10.0.0",
]
